dodane testy i paginacja