@@ -2,6 +2,7 @@ package com.example.zajecia7doktorki.service;
 
 import com.example.zajecia7doktorki.command.PatientUpdateCommand;
 import com.example.zajecia7doktorki.domain.Appointment;
+import com.example.zajecia7doktorki.domain.Customer;
 import com.example.zajecia7doktorki.domain.Patient;
 import com.example.zajecia7doktorki.exception.PatientNotFoundException;
 import com.example.zajecia7doktorki.model.Role;
@@ -15,9 +16,13 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -71,6 +76,30 @@ class PatientServiceTest {
     }
 
     @Test
+    void shouldGetAllPatients() {
+        Patient patient1 = new Patient();
+        patient1.setName("Jan");
+        patient1.setSurname("Kowalski");
+        // ... (ustaw pozostałe pola dla patient1)
+
+        Patient patient2 = new Patient();
+        patient2.setName("Anna");
+        patient2.setSurname("Nowak");
+        // ... (ustaw pozostałe pola dla patient2)
+
+        List<Customer> expectedPatientsList = List.of(patient1, patient2);
+        Page<Customer> expectedPatients = new PageImpl<>(expectedPatientsList);
+
+        when(customerRepository.findAllByUserType("PATIENT", PageRequest.of(0, 20)))
+                .thenReturn(expectedPatients);
+
+        Page<Patient> actualPatients = patientService.getAllPatients(PageRequest.of(0, 20));
+
+        assertThat(actualPatients.getTotalElements()).isEqualTo(2);
+        assertThat(actualPatients.getContent()).isEqualTo(expectedPatientsList);
+    }
+
+    @Test
     void shouldThrowWhenPatientNotFound() {
         when(customerUserDetailsService.getUserDetails()).thenReturn(mockUserDetails);
         when(customerRepository.findByLogin("expectedUsername")).thenReturn(Optional.empty());
@@ -105,16 +134,22 @@ class PatientServiceTest {
         verify(customerRepository).delete(any(Patient.class));
     }
 
-    @Test
-    void shouldGetPatientAppointments() {
-        when(customerUserDetailsService.getUserDetails()).thenReturn(mockUserDetails);
-        when(customerRepository.findByLogin("expectedUsername")).thenReturn(Optional.of(expectedPatient));
-        when(expectedPatient.getAppointments()).thenReturn(Collections.emptyList());
-
-        List<Appointment> appointments = patientService.getPatientAppointments();
-
-        assertThat(appointments).isEmpty();
-    }
+//    @Test
+//    void shouldGetPatientAppointments() {
+//        when(customerUserDetailsService.getUserDetails()).thenReturn(mockUserDetails);
+//        when(customerRepository.findByLogin("expectedUsername")).thenReturn(Optional.of(expectedPatient));
+//
+//        List<Appointment> appointmentsList = List.of(/* utwórz i dodaj obiekty Appointment */);
+//        Page<Appointment> appointmentsPage = new PageImpl<>(appointmentsList, PageRequest.of(0, 10), appointmentsList.size());
+//
+//        // Zakładam, że masz metodę w Patient, która zwraca stronicowane wizyty
+//        when(expectedPatient.getAppointments(PageRequest.of(0, 10))).thenReturn(appointmentsPage);
+//
+//        Page<Appointment> actualAppointments = patientService.getPatientAppointments(PageRequest.of(0, 10));
+//
+//        assertThat(actualAppointments.getTotalElements()).isEqualTo(appointmentsList.size());
+//        assertThat(actualAppointments.getContent()).containsExactlyElementsOf(appointmentsList);
+//    }
 
     private void setUpPatient() {
         expectedPatient = spy(new Patient());
